--- a/prometheus-windows/config/prometheus.yml
+++ b/prometheus-windows/config/prometheus.yml
@@ -4,6 +4,7 @@ global:
 scrape_configs:
   - job_name: 'windows_exporter' #Informações ambiente windows
     scrape_interval: 5s
+    scrape_timeout: 5s
     static_configs:
       - targets: ['host.docker.internal:9182']
         
